--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,12 @@
 }
 
 .image {
-    width:100%; height:300px;
-    
+    width:100%; height:500px;
 }
+
+.listItem {
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 
