--- a/styles/style.css
+++ b/styles/style.css
@@ -55,14 +55,15 @@
 
 .top-bar {
     position: fixed;
-    color: white;
+    color: yellow;
     width: 100%;
     top: 0;
     left: 0;
-    background-color: rgb(10, 0, 0, 0.8);
+    background-color: rgb(10, 0, 0, 0.9);
     padding-left: 30px;
     
 }
+
 
 
 
